feat(tmux): new look

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,4 @@
-# use control + meta h and l to switch windows
+# # use control + meta h and l to switch windows
 bind -n C-M-h previous-window
 bind -n C-M-l next-window
 
@@ -16,7 +16,8 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-set-option -sa terminal-overrides ",xterm*:Tc"
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
 
 # resize panes
 bind -r H resize-pane -L 5
@@ -60,34 +61,72 @@ bind-key -N "Start a scratch terminal session" -r M-g display-popup -E "tmux new
 # reload config file
 bind-key -N "Reload the config file" r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded!"
 
-
 # List of plugins
+set-environment -g TMUX_PLUGIN_MANAGER_PATH ~/.config/tmux/plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dracula/tmux'
+set -g @plugin 'catppuccin/tmux#v2.1.2'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'omerxx/tmux-floax'
 set -ga update-environment EDITOR
 set -g @plugin 'schasse/tmux-jump' # prefix + f
 set -g @jump-key 'f'
 
-# Theme options
-set -g @dracula-show-powerline true
-set -g @dracula-show-left-icon session
-set -g @dracula-show-left-sep ""
-set -g @dracula-show-right-sep ""
-set -g @dracula-show-flags true
-set -g @dracula-left-icon-padding 0
-set -g @dracula-show-fahrenheit false
+ # Theme options
+set -g @catppuccin_flavor 'mocha' # latte, frappe, macchiato or mocha
+set -g @catppuccin_status_background "none"
+set -g @catppuccin_window_status_style "none"
+set -g @catppuccin_pane_status_enable "off"
+set -g @catppuccin_pane_border_status "off"
+
+# Configure Online
+set -g @online_icon "ok"
+set -g @offline_icon "nok"
+
+# window look
+## status left
+set -g status-left-length 100
+set -g status-left ""
+set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]  #S },#{#[bg=#{@thm_bg},fg=#{@thm_green}]  #S }}"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]#{?window_zoomed_flag,│,}"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
+
+## status right
+set -g status-right-length 100
+set -g status-right ""
+set -ga status-right "#{?#{e|>=:10,#{battery_percentage}},#{#[bg=#{@thm_red},fg=#{@thm_bg}]},#{#[bg=#{@thm_bg},fg=#{@thm_pink}]}} #{battery_icon} #{battery_percentage} "
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
+set -ga status-right "#[bg=#{@thm_bg}]#{?#{==:#{online_status},ok},#[fg=#{@thm_mauve}] 󰖩 on ,#[fg=#{@thm_red},bold]#[reverse] 󰖪 off }"
+
+set -wg automatic-rename on
+set -g automatic-rename-format "#{pane_current_command}"
+
+set -g window-status-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-style "bg=#{@thm_bg},fg=#{@thm_rosewater}"
+set -g window-status-last-style "bg=#{@thm_bg},fg=#{@thm_peach}"
+set -g window-status-activity-style "bg=#{@thm_red},fg=#{@thm_bg}"
+set -g window-status-bell-style "bg=#{@thm_red},fg=#{@thm_bg},bold"
+set -gF window-status-separator "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│"
+
+set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-current-style "bg=#{@thm_peach},fg=#{@thm_bg},bold"
 
 set -g status-position top
+set -g status-style "bg=#{@thm_bg}"
+set -g status-justify "absolute-centre"
 
 # open sessionx
 set -g @sessionx-bind 's'
 set -g @sessionx-fzf-builtin-tmux 'on'
 set -g @sessionx-tmuxinator-mode 'on'
 
+
+run '~/.config/tmux/plugins/tmux/catppuccin.tmux'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
