fix(aerospace): use macvim as a floating window

--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -58,6 +58,10 @@ run = 'layout floating'
 if.app-name-regex-substring = 'slack'
 run = 'layout floating'
 
+[[on-window-detected]]
+if.app-name-regex-substring = 'macvim'
+run = 'layout floating'
+
 # Gaps between windows (inner-*) and between monitor edges (outer-*).
 # Possible values:
 # - Constant:     gaps.outer.top = 8
