fix(tmux): add tmux battery

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -71,6 +71,7 @@ set -g @plugin 'catppuccin/tmux#v2.1.2'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'tmux-plugins/tmux-online-status'
+set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'omerxx/tmux-floax'
 set -ga update-environment EDITOR
 set -g @plugin 'schasse/tmux-jump' # prefix + f
@@ -104,8 +105,8 @@ set -ga status-right "#{?#{e|>=:10,#{battery_percentage}},#{#[bg=#{@thm_red},fg=
 set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
 set -ga status-right "#[bg=#{@thm_bg}]#{?#{==:#{online_status},ok},#[fg=#{@thm_mauve}] 󰖩 on ,#[fg=#{@thm_red},bold]#[reverse] 󰖪 off }"
 
-set -wg automatic-rename on
-set -g automatic-rename-format "#{pane_current_command}"
+# set -wg automatic-rename on
+# set -g automatic-rename-format "#{pane_current_command}"
 
 set -g window-status-format " #I#{?#{!=:#{window_name},Window},: #W,} "
 set -g window-status-style "bg=#{@thm_bg},fg=#{@thm_rosewater}"
