--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -53,6 +53,10 @@ run = 'layout floating'
 if.app-name-regex-substring = 'calendar'
 run = 'layout floating'
 
+[[on-window-detected]]
+if.app-name-regex-substring = 'weather'
+run = 'layout floating'
+
 
 [[on-window-detected]]
 if.app-name-regex-substring = 'slack'
