fix(brew): add ctags

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,55 +1,51 @@
+alacritty
 automake
 bat
+bpytop
 cmake
 coreutils
+ctags
 docker-completion
 docker-machine
 doctl
 exercism
 fd
+ffmpegthumbnailer
+font-symbols-only-nerd-font
 fzf
 gh
 gnu-sed
 gnupg
 go
 imagemagick
+jq
 lazydocker
 libyaml
 lpeg
 lsd
 mutagen-io/mutagen/mutagen
+navi
 neovim
 opam
 openssl@1.1
 php
 pkg-config
+poppler
+procs
+raycast
 ripgrep
+sevenzip
+shortcat
 starship
 tlrc
+tmate
 tmux
+tmuxinator
 watch
 xwmx/taps/hosts
+yazi
 yq
 zlib
 zoxide
 zplug
 zsh-syntax-highlighting
-shortcat
-raycast
-tmate
-procs
-alacritty
-navi
-tmuxinator
-bpytop
-yazi
-ffmpegthumbnailer
-sevenzip
-jq
-poppler
-fd
-ripgrep
-fzf
-zoxide
-imagemagick
-font-symbols-only-nerd-font
