fix(tmux): use tmux sensible

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -65,7 +65,7 @@ bind-key -N "Reload the config file" r source-file ~/.config/tmux/tmux.conf \; d
 set-environment -g TMUX_PLUGIN_MANAGER_PATH ~/.config/tmux/plugins
 set -g @plugin 'tmux-plugins/tpm'
 
-# set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux#v2.1.2'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
