--- a/tmuxinator/Personal.yml
+++ b/tmuxinator/Personal.yml
@@ -15,3 +15,8 @@ windows:
   - go-workspace:
       layout: main-vertical
       root: ~/code/go-workspace/src/github.com/pablobfonseca
+  - notes:
+      layout: main-vertical
+      root: ~/Library/Mobile Documents/iCloud~md~obsidian/Documents/SecondBrain
+      panes:
+        - nvim .
