feat(tmux): change sessionx binding key

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -128,7 +128,7 @@ set -g status-style "bg=#{@thm_bg}"
 set -g status-justify "absolute-centre"
 
 # open sessionx
-set -g @sessionx-bind 's'
+set -g @sessionx-bind 'o'
 set -g @sessionx-fzf-builtin-tmux 'on'
 set -g @sessionx-tmuxinator-mode 'on'
 
