fix(tmux): fix sessionx popup

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -129,9 +129,8 @@ set -g status-justify "absolute-centre"
 
 # open sessionx
 set -g @sessionx-bind 'o'
-set -g @sessionx-fzf-builtin-tmux 'on'
+set -g @sessionx-fzf-builtin-tmux 'off' # Temporary, as the built-in tmux is broken
 set -g @sessionx-tmuxinator-mode 'on'
-
 
 run '~/.config/tmux/plugins/tmux/catppuccin.tmux'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
