feat(tmux): remove tmux-jump and add tmux-fingers

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -75,8 +75,9 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'omerxx/tmux-floax'
 set -ga update-environment EDITOR
-set -g @plugin 'schasse/tmux-jump' # prefix + f
-set -g @jump-key 'f'
+set -g @plugin 'Morantron/tmux-fingers'
+set -g @fingers-key f
+set -g @fingers-jump-key j
 
  # Theme options
 set -g @catppuccin_flavor 'mocha' # latte, frappe, macchiato or mocha
