fix(tmuxinator): new workspace and fix command on Upscope

--- a/tmuxinator/Upscope.yml
+++ b/tmuxinator/Upscope.yml
@@ -8,4 +8,4 @@ windows:
         - nvim
         -
   - lazydocker: upscope lazydocker
-  - types-watch: upscope types:build -w
+  - types-watch: upscope build types -w
