--- a/tmuxinator/Personal.yml
+++ b/tmuxinator/Personal.yml
@@ -20,3 +20,7 @@ windows:
       root: ~/Library/Mobile Documents/iCloud~md~obsidian/Documents/SecondBrain
       panes:
         - nvim .
+  - ollama:
+      layout: main-vertical
+      panes:
+        - ollama serve
