--- a/.luarc.json
+++ b/.luarc.json
@@ -5,6 +5,7 @@
         "require"
     ],
     "diagnostics.disable": [
-        "missing-fields"
+        "missing-fields",
+        "param-type-mismatch"
     ]
 }
