--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -42,6 +42,8 @@ brew "yq"
 brew "zlib"
 brew "zoxide"
 brew "zsh-syntax-highlighting"
+brew "pandoc"
+brew "tmux-fingers"
 
 cask "1password-cli"
 cask "aerospace"
@@ -55,3 +57,4 @@ cask "shortcat"
 cask "slack"
 cask "wezterm"
 cask "zoom"
+cask "karabiner-elements"
