--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -75,9 +75,10 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'omerxx/tmux-floax'
 set -ga update-environment EDITOR
-set -g @plugin 'Morantron/tmux-fingers'
-set -g @fingers-key f
-set -g @fingers-jump-key j
+# set -g @plugin 'Morantron/tmux-fingers'
+set -g @plugin 'laktak/extrakto'
+# set -g @fingers-key f
+# set -g @fingers-jump-key j
 
  # Theme options
 set -g @catppuccin_flavor 'mocha' # latte, frappe, macchiato or mocha
@@ -132,6 +133,10 @@ set -g status-justify "absolute-centre"
 set -g @sessionx-bind 'o'
 set -g @sessionx-fzf-builtin-tmux 'off' # Temporary, as the built-in tmux is broken
 set -g @sessionx-tmuxinator-mode 'on'
+
+# image.nvim
+set -gq allow-passthrough on
+set -g visual-activity off
 
 run '~/.config/tmux/plugins/tmux/catppuccin.tmux'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
