feat(tmux,zsh): add chrome cli actions

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -55,6 +55,9 @@ bind-key -N "Open Lazygit" -r C-g run-shell "tmux popup -d \"#{pane_current_path
 # open file in nvim
 bind-key -N "Open file in nvim" -r C-f run-shell "tmux neww 'zsh -i -c open_file'"
 
+# open chrome actions
+bind-key -N "Chrome actions" -r C-c run-shell "zsh -i -c chromeaction"
+
 # open a scratch terminal
 bind-key -N "Start a scratch terminal session" -r M-g display-popup -E "tmux new-session -A -s scratch"
 
@@ -79,6 +82,7 @@ set -ga update-environment EDITOR
 set -g @plugin 'laktak/extrakto'
 # set -g @fingers-key f
 # set -g @fingers-jump-key j
+# set -g @plugin 'pablobfonseca/tmux-vim-cheat'
 
  # Theme options
 set -g @catppuccin_flavor 'mocha' # latte, frappe, macchiato or mocha
