--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -44,6 +44,7 @@ brew "zoxide"
 brew "zsh-syntax-highlighting"
 brew "pandoc"
 brew "tmux-fingers"
+brew "btop"
 
 cask "1password-cli"
 cask "aerospace"
