fix(tmux): changes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,12 @@
-# # use control + meta h and l to switch windows
+# use control + meta h and l to switch windows
 bind -n C-M-h previous-window
 bind -n C-M-l next-window
+
+# Enable focus events
+set -s focus-events on
+
+# Remove delay after ESC is pressed
+set -s escape-time 0
 
 # unbind default prefix and set it to C-a
 unbind C-b
@@ -8,7 +14,8 @@ set -g prefix C-a
 bind a send-prefix
 
 # act like vim
-set-window-option -g mode-keys vi
+set -g mode-keys vi
+set -g status-keys vi
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
@@ -17,7 +24,14 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
+set -as terminal-features ",xterm*:RGB"
+set -ga terminal-overrides ",*256col*:Tc"
+
+# Increase scrollback
+set -g history-limit 150000
+
+# Show status line messages until key is pressed
+set -g display-time 0
 
 # resize panes
 bind -r H resize-pane -L 5
