--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -49,6 +49,9 @@ bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
+# synchronize panes
+bind y setw synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
+
 # Secondary binding for C-l to retain redraw
 bind C-l send-keys 'C-l'
 
