feat(tmux): improve terminal settings
- Add automatic rename and activity monitoring
- Add status interval for periodic redraw
- Improve terminal detection with fallback to screen-256color
- Remove unused chrome actions binding

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -23,7 +23,17 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-set -g default-terminal "tmux-256color"
+setw -g automatic-rename on
+set -g renumber-windows on
+
+set -g status-interval 10 # redraw status line every 10 seconds
+
+set -g monitor-activity on
+set -g visual-activity off
+
+set -g default-terminal "screen-256color"
+if 'infocmp -x tmux-256color > /dev/null 2>&1' 'set -g default-terminal "tmux-256color"'
+
 set -as terminal-features ",xterm*:RGB"
 set -ga terminal-overrides ",*256col*:Tc"
 
@@ -71,9 +81,6 @@ bind-key -N "Open Lazygit" -r C-g run-shell "tmux popup -d \"#{pane_current_path
 
 # open file in nvim
 bind-key -N "Open file in nvim" -r C-f run-shell "tmux neww 'zsh -i -c open_file'"
-
-# open chrome actions
-bind-key -N "Chrome actions" -r C-c run-shell "zsh -i -c chromeaction"
 
 # open a scratch terminal
 bind-key -N "Start a scratch terminal session" -r M-g display-popup -E "tmux new-session -A -s scratch"
