feat(zsh,tmux): add copy_file_path function with tmux popup
Add a zsh function to browse files with fzf and copy the selected
file's relative path to clipboard. Bound to prefix+f in tmux.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -82,6 +82,9 @@ bind-key -N "Open Lazygit" -r C-g run-shell "tmux popup -d \"#{pane_current_path
 # open file in nvim
 bind-key -N "Open file in nvim" -r C-f run-shell "tmux neww 'zsh -i -c open_file'"
 
+# copy file path to clipboard
+bind-key -N "Copy file path to clipboard" -r f run-shell "tmux popup -d '#{pane_current_path}' -xC -yC -w80% -h80% -E 'zsh -i -c copy_file_path'"
+
 # open a scratch terminal
 bind-key -N "Start a scratch terminal session" -r M-g display-popup -E "tmux new-session -A -s scratch"
 
