feat(tmux): add pane styling to distinguish active pane
Dim inactive panes with darker background and faded text using
Catppuccin Mocha colors for visual distinction.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -170,5 +170,12 @@ set -gq allow-passthrough on
 set -g visual-activity off
 
 run '~/.config/tmux/plugins/tmux/catppuccin.tmux'
+
+# Pane styling - distinguish active pane (Catppuccin Mocha colors)
+set -g pane-border-style "fg=#313244"
+set -g pane-active-border-style "fg=#fab387"
+set -g window-style "bg=#11111b,fg=#6c7086"
+set -g window-active-style "bg=#1e1e2e,fg=#cdd6f4"
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
